--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ body {
 }
 
 /* slider */
+.carousel-item img {
+  width: 100%;
+  height: 90vh;
+  object-fit: cover;
+  object-position: center;
+}
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.5);
 }
